# bot1

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.ini  config.ini.example  pyproject.toml  requirements.txt
.github/workflows/: deploy-bot.yml  linter.yml  pytest.yml
bot/: main.py
src/: main.py
src/cogs/: code_question.py  code_quote.py  init.py  init_bot.py  ping.py  roles.py  sim_db.json  tablebot.py
src/tests/: test_config.py  test_env.py
src/utils/: basic.py  basic_utils.py  create_new_cog.py
tests/: test_config.py  test_env.py
